--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      href="http://antifavicon.com/genicon2.cgi?txttop=K&txtbot=H&fgtop=%23FF577F&fgbot=%23FF577F&bgtop=%23000000&bgbot=%23000000&bcolor=%23000000&drawborder=no"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kenziehub</title>
     <link
